--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -2,7 +2,7 @@
 \usepackage[small]{caption}
 %\usepackage[usenames,dvipsnames]{color}
 %\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
-\usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, siunitx, tikz, flafter}
+\usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, siunitx,  flafter}
 \usepackage[pagewise,displaymath, mathlines]{lineno}
 \usepackage{epstopdf}
 \renewcommand{\theequation}{eqn \arabic{equation}}
@@ -130,30 +130,6 @@ The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to mod
 \end{figure}
 
 
-\begin{comment}
-%move to appendix
-\begin{table}[t]
-\centering
-\begin{tabular}{lll}
-Symbol 	& Description & Units\\\hline
-$v$		& Velocity & \SI{}{\meter\per\second}\\
-$\theta$	& Angle of detection & Radians \\
-$\alpha$	& Animal call/beam width & Radians \\
-$r$ 		& Detection distance & Metres\\
-$p$ 		& Average profile width & Metres\\
-$t$		& Time & Seconds\\
-$z$		& Number of detections & \\
-$D$		& Animal density & \SI{}{\animals\per\meter\squared} \\
-$x_i$	        & Focal Angle $i \in \{1,2,3,4\} $ 	& Radians\\
-$T$ 		& Step length & Seconds\\
-$N$ 		& Number of steps per simulation & \\
-$d$ 		& Time step index &
-
-\end{tabular}
-\caption{List of symbols used to describe the gREM}
-\label{t:paras}
-\end{table}
-\end{comment}
 
 \subsubsection{Gas Model}
 
@@ -232,7 +208,7 @@ D = z/vtp
 \end{equation}
 We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \alpha/2)$ while the right side is zero. This profile does not exist if we return to the full $2r\sin( \alpha/2)$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
-While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S2), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{} script for the gREM in Appendix S4.  
+While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S3), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{R} script for the gREM in Appendix S4.  
 
 %delete or reformat within the current version of figure 1
 \begin{comment}
@@ -326,7 +302,7 @@ Each simulation consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} s
 
 Animals were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying detection angles with the results recorded separately. The details of each individual capture event, including the angle between the animals heading and the sensor, were saved from this information the number of capture events can be calculated for a given call angle. The total number of these detections were summed for each set of parameters in the simulation, the gREM was then applied in order to estimate the density in the simulation. The difference between the true input density and density estimated by the gREM were used to evaluate the bias in the analytical models. If the gREM is correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed boxplots of the estimates error to graphically test for significant differences between the true and estimated densities. 
 
-All the derived models were tested to demonstrate the accuracy and precision of the gREM while the assumptions of the analytical models were met. We selected four example models (models NW1, SW1, NE1, and SE3, where these names refer to Figure 1 in Appendix S1) for demonstrating the accuracy and precision of the gREM with low captures rates, and the accuracy and precision when movement patterns brake the assumptions of the gREM.  We specifically looked at a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions. The four models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all the derived models in the gREM follow the same pattern as the four that have been shown in the main text. 
+All the derived models were tested to demonstrate the accuracy and precision of the gREM while the assumptions of the analytical models were met. We selected four example models (models NW1, SW1, NE1, and SE3, as in Figure~\ref{f:equalRegions}) for demonstrating the accuracy and precision of the gREM with low captures rates, and the accuracy and precision when movement patterns brake the assumptions of the gREM.  We specifically looked at a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions. The four models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all the derived models in the gREM follow the same pattern as the four that have been shown in the main text. 
 
 
 \section{Results}
@@ -351,7 +327,7 @@ Although more thorough checks are performed in Appendix S3, it can be seen that 
 \begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{imgs/AverageModelBias.pdf}
-	\caption{Distribution of the bias for each of the derived models. Percentage error of analytical model calculated from the simulation when settings are: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. The number numbers referred to here can be found in Figure 1 Appendix S1, and the colour of each box plot match the functional form of the equation as seen in Figure~\ref{f:equalModelResults}.
+	\caption{Distribution of the bias for each of the derived models. Percentage error of analytical model calculated from the simulation when settings are: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. The numbers referred to here can be found in Figure 1 Appendix S2, and the colour of each box plot match the functional form of the equation as seen in Figure~\ref{f:equalModelResults}.
   }
 	\label{f:ModelBias}
 \end{figure}
@@ -371,7 +347,7 @@ For each model we compared the estimated densities to the true densities in a si
 	\includegraphics[width=1\textwidth]{imgs/ResultsNoCaptures.pdf}
          \caption{Number of captures}
            \label{f:Captures}
-        \caption{Accuracy of the gREM reminds unchanged, whilst precision increases, with captures. Boxplots of four test models when given different numbers of captures where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S1.} 
+        \caption{Accuracy of the gREM reminds unchanged, whilst precision increases, with captures. Boxplots of four test models when given different numbers of captures where: $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S2.} 
 \end{figure}
 
 The precision of the model is dependent on the number of captures during the survey. In Figure~\ref{f:Captures} we can see that the model precision gets greater as the number of captures increase. As the number of captures reaches about 100 then the coefficient of variation falls below 10\% which could be considered negligible. %The number of captures is highly dependent on the speed of the animals, the size of the detection zone, and the length of the survey, as these values increase the number of captures is also likely to increase. 
@@ -385,14 +361,14 @@ The precision of the model is dependent on the number of captures during the sur
 	\includegraphics[width=1\textwidth]{imgs/ResultsPerch.pdf}
           \caption{Proportion of time spent stationary}
           \label{f:Perch}
-	\caption{Accuracy and the precision of the gREM given changes in the amount of time an animal spends stationary on average. Distribution of model error when simulated animals spend increasing proportion of time stationary where:  $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where the model names refer to Figure 1 in Appendix S1. } 
+	\caption{Accuracy and the precision of the gREM given changes in the amount of time an animal spends stationary on average. Distribution of model error when simulated animals spend increasing proportion of time stationary where:  $r = $ \SI{100}{\meter}; $T = $ \SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where the model names refer to Figure 1 in Appendix S2. } 
 \end{figure}
 \begin{figure}[t]
                 \centering
 		\includegraphics[width=1\textwidth]{imgs/ResultsTort.pdf}
                 \caption{Angle of correlated walk}
                 \label{f:Tort}
-	\caption{Accuracy and the precision of the gREM given different types of correlated walks. Distribution of model error when simulated animals move with different types of correlated walk where:  $r = $ \SI{10}{\meter}; $T = $ \SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models.Where the model names refer to Figure 1 in Appendix S1.} 
+	\caption{Accuracy and the precision of the gREM given different types of correlated walks. Distribution of model error when simulated animals move with different types of correlated walk where:  $r = $ \SI{10}{\meter}; $T = $ \SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D = $ \SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S2.} 
 \end{figure}
 
                   
