--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -28,7 +28,7 @@
 
 
 
-\input{tikzREMmethods.tex}
+%\input{tikzREMmethods.tex}
 
 \begin{document}
 
@@ -118,7 +118,7 @@ In this study we create a generalised REM (gREM), as an extension to the camera 
 
 \subsection{Analytical Model}
 
-The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi/2$ radians and detection distance $r$ (Appendix S1 for a list of symbols), giving a circular sector within which animals can be captured (detection zone)(Figure~\ref{f:AngleDef}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$ (Figure~\ref{f:AngleDef}). Consequently, we derive the gREM for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$. We start deriving the gREM with the simplest situation, the gas model where $\theta =  2\pi$ and $ \alpha =  2\pi$. 
+The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi/2$ radians and detection distance $r$ (Appendix S1 for a list of symbols), giving a circular sector within which animals can be captured (the detection zone)(Figure~\ref{f:AngleDef}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$ (Figure~\ref{f:AngleDef}). Consequently, we derive the gREM for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$. We start deriving the gREM with the simplest situation, the gas model where $\theta =  2\pi$ and $ \alpha =  2\pi$. 
 
 %%% Put in new diagram.
 \begin{figure}[t]
@@ -138,7 +138,7 @@ Following \cite{yapp1956theory}, we derive the gas model where sensors can captu
 For derivation purposes, we consider relative velocity from the reference frame of the animals. Conceptually, this requires us to imagine that all animals are stationary and randomly distributed in space, while the sensor moves with velocity $v$. If we calculate the area covered by the sensor during the survey period we can estimate the number of animals it should capture. As a circle moving across a plane, the area covered by the sensor per unit time is $2rv$. The number of expected captures, $z$, for a survey period of $t$, with an animal density of $D$ is $z = 2rvtD$. To estimate the density, we rearrange to get $D = z/2rvt$.
 
 \subsubsection{gREM derivations for different detection and signal widths}
-Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g., sensors have different detection widths and animals have different signal widths). For different combinations $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the size of the sensor detection zone having a diameter of $2r$, the size changes with the approach angle of the sensor and the animal. The size of the detection zone presented to the animal (averaged across all approach angles) is defined as the profile $p$. However, different combinations of $\theta$ and $\alpha$ need different equations to calcuate $p$. 
+Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g., sensors have different detection widths and animals have different signal widths). For different combinations $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the size of the sensor detection zone having a diameter of $2r$, the size changes with the approach angle between the sensor and the animal. For any given signal width and detector width and depending on the angle that the animal approaches the sensor, the width of the area within which an animal can be detected is called the profile, $p$. The size of the profile (averaged across all approach angles) is defined as the average profile $\bar{p}$. However, different combinations of $\theta$ and $\alpha$ need different equations to calcuate $\bar{p}$. 
 
 \begin{figure}
 \centering
@@ -147,13 +147,13 @@ Different combinations of $\theta$ and $\alpha$ would be expected to occur (e.g.
 \label{f:equalRegions}
 \end{figure}
 
-We have identified the parameter space for the combinations of$\theta$ and $\alpha$ for which the derivation of the equations are the same (defined as sub-models in the gREM) (Figure~\ref{f:equalRegions}). For example, the gas model becomes the simplest gREM sub-model (upper right in (Figure~\ref{f:equalRegions}) and the REM from \citep{rowcliffe2008estimating} is another gREM sub-model where $\theta<\pi/2$ and $\alpha = 2\pi$. We derive one gREM sub-model SE2 as an example below (where $4 \pi - 2 \alpha < \theta < 2\pi ,\; 0 < \alpha <\pi$) (see Appendix S2 for other gREM sub-models).
+We have identified the parameter space for the combinations of $\theta$ and $\alpha$ for which the derivation of the equations are the same (defined as sub-models in the gREM) (Figure~\ref{f:equalRegions}). For example, the gas model becomes the simplest gREM sub-model (upper right in (Figure~\ref{f:equalRegions}) and the REM from \citep{rowcliffe2008estimating} is another gREM sub-model where $\theta<\pi/2$ and $\alpha = 2\pi$. We derive one gREM sub-model SE2 as an example below (where $4 \pi - 2 \alpha < \theta < 2\pi ,\; 0 < \alpha <\pi$) (see Appendix S2 for other gREM sub-models).
 
 \subsubsection{Example derivation of SE2}
 
-In order to calculate the size of the detection zone presented to the animal (averaged across all approach angles), we have to integrate over the focal angle, $x_1$ (Figure~\ref{f:xOne}). This is the focal angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the detection zone depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal, $x_1  = \pi/2$ and the size of detection zone is $2r$ (Figure~\ref{f:firstInt}). 
+In order to calculate the size of the average profile, we have to integrate over the focal angle, $x_1$ (Figure~\ref{f:xOne}). This is the angle taken from the centre line of the sensor. Other focal angles are possible ($x_2$, $x_3$, $x_4$) and are used in other gREM sub-models (see Appendix S2). As the size of the profile depends on the approach angle, we present the derivation across all approach angles. When the sensor is directly approaching the animal $x_1  = \pi/2$.
 
-As the sensor travels anti-clockwise around the animal, the size of the detection zone will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:firstInt}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:secondInt}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$ (Figure~\ref{f:thirdInt}). 
+Starting from $x_1 = \pi/2$ the size of profile is $2r\sin \alpha/2$ (Figure~\ref{f:firstInt}). At this point, the size of $\alpha$ limits the size of the profile. This remains the case until the animal reaches the right hand side of the sensor where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:secondInt}). When the sensor is approached from this angle the size of the profile is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the profile. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin\alpha/2$ (Figure~\ref{f:thirdInt}). 
 
 % will remain at $2r$ until the approach angle is greater than $\alpha/2$ (Figure~\ref{f:Slide2}). The size of the detection zone is therefore $2r\sin$($\alpha$/2). At this point, the size of $\alpha$ limits the size of the detection zone. This remains the case until the sensor reaches the right hand side of the animal where $x_1$  = $\theta$/2 + $\pi$/2 - $\alpha$/2 (Figure~\ref{f:Slide2}). The size of the detection zone is $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$ and the size of $\theta/$ limits the size of the detection zone. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin(\alpha/2)$. 
 
@@ -194,17 +194,17 @@ As the sensor travels anti-clockwise around the animal, the size of the detectio
 
 
 %here be dragons
-We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor). To find the average profile width for any angle of approach, we integrate these functions over their appropriate intervals of $x_1$ and divide by $\pi$ to give:
+We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor). To find the average profile width for all angles of approach, we integrate these functions over their appropriate intervals of $x_1$ and divide by $\pi$ to give:
 
 \begin{align}
-    p &=\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \sin{\left (\frac{\alpha}{2} \right )} + r \cos{\left (x_1 - \frac{\theta}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{3 \pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1\right) \nonumber  \\
+    \bar{p} &=\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \sin{\left (\frac{\alpha}{2} \right )} + r \cos{\left (x_1 - \frac{\theta}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{3 \pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1\right) \nonumber  \\
      &= \frac{r}{\pi} \left(\theta \sin{\left (\frac{\alpha}{2} \right )} - \cos{\left (\frac{\alpha}{2} \right )} + \cos{\left (\frac{\alpha}{2} + \theta \right )}\right) \label{e:p321}
 \end{align}
 
-Then, as with the gas model, this term is used to calculate density
+Here the three integrals correspond to Figures \ref{f:firstInt}, \ref{f:secondInt} and \ref{f:thirdInt} respectively. Then, as with the gas model, this term is used to calculate density
 \begin{equation}
 \label{e:gas}
-D = z/vtp
+D = z/vt\bar{p}
 \end{equation}
 We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \alpha/2)$ while the right side is zero. This profile does not exist if we return to the full $2r\sin( \alpha/2)$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
