Edits and stuff

--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -106,7 +106,8 @@ We develop gREM and tested it and come up with specific recommedations for its u
 
 Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,jones2011indicator} are becoming increasingly used to survey animal populations, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. 
 
-However, the problem of converting sampled count data to estimates of density remains. The preferred method for estimating density if individuals can be recognised is capture-recapture e.g. \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. If individual recognition is impossible but the distance between animal and sensor can be estimated, distance sampling methods can be used to estimate density, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}. Finally, methods for density estimation, based on ideal gas models (originally formulated by physicists to estimate contact rates between molecules) have been developed \citep{yapp1956theory, Hutchinson_Waser_2007}. The gas model has been modified for use with camera traps, which have an angle of detection (the angle within which an animal can be detected)  up to $\pi$ radians \citep{rowcliffe2008estimating}. This angle limitation may not apply to acoustic sensors. Furthermore, animal calls may be directional, and the existing random encounter model (REM) designed for camera trap data does not handle this case.
+% @liz karanth1995 here wasn't in the bib file. I think it's karanth1995Estimating, but thought I should check.
+However, the problem of converting sampled count data to estimates of density remains. The preferred method for estimating density if individuals can be recognised is capture-recapture e.g. \citep{karanth1995Estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera}. If individual recognition is impossible but the distance between animal and sensor can be estimated, distance sampling methods can be used to estimate density, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}. Finally, methods for density estimation, based on ideal gas models (originally formulated by physicists to estimate contact rates between molecules) have been developed \citep{yapp1956theory, Hutchinson_Waser_2007}. The gas model has been modified for use with camera traps, which have an angle of detection (the angle within which an animal can be detected)  up to $\pi$ radians \citep{rowcliffe2008estimating}. This angle limitation may not apply to acoustic sensors. Furthermore, animal calls may be directional, and the existing random encounter model (REM) designed for camera trap data does not handle this case.
 
 %Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{Adams_2010,walters_2012}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \citep{clark1995application, mcdonald2004difar,barlow2005estimates}.  
 
@@ -206,9 +207,9 @@ Here the three integrals correspond to Figures \ref{f:firstInt}, \ref{f:secondIn
 \label{e:gas}
 D = z/vt\bar{p}
 \end{equation}
-We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \alpha/2)$ while the right side is zero. This profile does not exist if we return to the full $2r\sin( \alpha/2)$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
+We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin \alpha/2$ while the right side is zero. This profile does not exist if we return to the full $2r\sin \alpha/2$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
-While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S3), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{R} script for the gREM in Appendix S4.  
+While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S3), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{Rcore} script for the gREM in Appendix S4.  
 
 %delete or reformat within the current version of figure 1
 \begin{comment}
