--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -293,7 +293,7 @@
 	Volume = {45},
 	Year = {2008}}
 
-@manual{R,
+@manual{Rcore,
 	Address = {Vienna, Austria},
 	Author = {{R Development Core Team}},
 	Note = {ISBN 3-900051-07-0},
