--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,66 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-07-10 12:34:15 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-11 16:01:23 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{anderson2001need,
+	Author = {Anderson, David R},
+	Date-Added = {2014-07-11 14:20:10 +0000},
+	Date-Modified = {2014-07-11 14:20:10 +0000},
+	Journal = {Wildlife Society Bulletin},
+	Pages = {1294--1297},
+	Publisher = {JSTOR},
+	Title = {The need to get the basics right in wildlife field studies},
+	Year = {2001}}
+
+@article{cutler1999using,
+	Author = {Cutler, Tricia L and Swann, Don E},
+	Date-Added = {2014-07-11 13:09:22 +0000},
+	Date-Modified = {2014-07-11 13:09:22 +0000},
+	Journal = {Wildlife Society Bulletin},
+	Pages = {571--581},
+	Publisher = {JSTOR},
+	Title = {Using remote photography in wildlife ecology: a review},
+	Year = {1999}}
+
+@inproceedings{heupel2012trends,
+	Author = {Heupel, Michelle R and Webber, Dale M},
+	Booktitle = {Am Fish Soc Symp},
+	Date-Added = {2014-07-11 11:54:26 +0000},
+	Date-Modified = {2014-07-11 11:54:26 +0000},
+	Pages = {219--231},
+	Title = {Trends in acoustic tracking: where are the fish going and how will we follow them},
+	Volume = {76},
+	Year = {2012}}
+
+@article{acevedo2006using,
+	Author = {Acevedo, Miguel A and Villanueva-Rivera, Luis J},
+	Date-Added = {2014-07-11 11:47:32 +0000},
+	Date-Modified = {2014-07-11 11:47:32 +0000},
+	Journal = {Wildlife Society Bulletin},
+	Number = {1},
+	Pages = {211--214},
+	Publisher = {BioOne},
+	Title = {Using automated digital recording systems as effective tools for the monitoring of birds and amphibians},
+	Volume = {34},
+	Year = {2006}}
+
+@article{everatt2014trophic,
+	Author = {Everatt, Kristoffer T and Andresen, Leah and Somers, Michael J},
+	Date-Added = {2014-07-10 11:44:06 +0000},
+	Date-Modified = {2014-07-10 11:44:06 +0000},
+	Journal = {PloS one},
+	Number = {6},
+	Pages = {e99389},
+	Publisher = {Public Library of Science},
+	Title = {Trophic Scaling and Occupancy Analysis Reveals a Lion Population Limited by Top-Down Anthropogenic Pressure in the Limpopo National Park, Mozambique},
+	Volume = {9},
+	Year = {2014}}
 
 @article{walters2012continental,
 	Author = {Walters, Charlotte L and Freeman, Robin and Collen, Alanna and Dietz, Christian and Brock Fenton, M and Jones, Gareth and Obrist, Martin K and Puechmaille, S{\'e}bastien J and Sattler, Thomas and Siemers, Bj{\"o}rn M and others},
@@ -293,7 +347,7 @@
 	Volume = {45},
 	Year = {2008}}
 
-@manual{Rcore,
+@manual{R,
 	Address = {Vienna, Austria},
 	Author = {{R Development Core Team}},
 	Note = {ISBN 3-900051-07-0},
@@ -384,9 +438,9 @@
 	Volume = {9},
 	Year = {2006}}
 
-@article{karanth1995Estimating,
+@article{karanth1995estimating,
 	Author = {Karanth, KU},
-	Date-Modified = {2014-07-10 11:34:15 +0000},
+	Date-Modified = {2014-07-11 14:25:58 +0000},
 	Journal = {Biological Conservation},
 	Number = {3},
 	Pages = {333--338},
