--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-07-11 16:01:23 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-15 15:05:25 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{manzo2012estimation,
+	Author = {Manzo, Emiliano and Bartolommei, Paola and Rowcliffe, J Marcus and Cozzolino, Roberto},
+	Date-Added = {2014-07-15 09:40:51 +0000},
+	Date-Modified = {2014-07-15 09:40:51 +0000},
+	Journal = {Acta Theriologica},
+	Number = {2},
+	Pages = {165--172},
+	Publisher = {Springer},
+	Title = {Estimation of population density of European pine marten in central Italy using camera trapping},
+	Volume = {57},
+	Year = {2012}}
+
+@article{harris2013applying,
+	Author = {Harris, Danielle and Matias, Luis and Thomas, Len and Harwood, John and Geissler, Wolfram H},
+	Date-Added = {2014-07-15 09:30:09 +0000},
+	Date-Modified = {2014-07-15 09:30:09 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Number = {5},
+	Pages = {3522--3535},
+	Publisher = {Acoustical Society of America},
+	Title = {Applying distance sampling to fin whale calls recorded by single seismic instruments in the northeast Atlantic},
+	Volume = {134},
+	Year = {2013}}
 
 @article{anderson2001need,
 	Author = {Anderson, David R},
