--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-07-15 15:05:25 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-15 19:14:14 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{schmidt2003count,
+	Author = {Schmidt, Benedikt R},
+	Date-Added = {2014-07-15 18:12:40 +0000},
+	Date-Modified = {2014-07-15 18:12:40 +0000},
+	Journal = {Comptes Rendus Biologies},
+	Pages = {119--124},
+	Publisher = {Elsevier},
+	Title = {Count data, detection probabilities, and the demography, dynamics, distribution, and decline of amphibians},
+	Volume = {326},
+	Year = {2003}}
+
+@article{elphick2008you,
+	Author = {Elphick, Chris S},
+	Date-Added = {2014-07-15 17:21:32 +0000},
+	Date-Modified = {2014-07-15 17:21:32 +0000},
+	Journal = {Journal of Applied Ecology},
+	Number = {5},
+	Pages = {1313--1320},
+	Publisher = {Wiley Online Library},
+	Title = {How you count counts: the importance of methods research in applied ecology},
+	Volume = {45},
+	Year = {2008}}
+
+@article{buckland2008estimating,
+	Author = {Buckland, Stephen T and Marsden, Stuart J and Green, Rhys E},
+	Date-Added = {2014-07-15 17:18:17 +0000},
+	Date-Modified = {2014-07-15 17:18:17 +0000},
+	Journal = {Bird Conservation International},
+	Number = {S1},
+	Pages = {S91--S108},
+	Publisher = {Cambridge Univ Press},
+	Title = {Estimating bird abundance: making methods work},
+	Volume = {18},
+	Year = {2008}}
+
+@article{lewis2007sperm,
+	Author = {Lewis, T and Gillespie, D and Lacey, C and Matthews, J and Danbolt, M and Leaper, R and McLanaghan, R and Moscrop, A},
+	Date-Added = {2014-07-15 15:11:48 +0000},
+	Date-Modified = {2014-07-15 15:11:48 +0000},
+	Journal = {Journal of the Marine Biological Association of the United Kingdom},
+	Number = {01},
+	Pages = {353--357},
+	Publisher = {Cambridge Univ Press},
+	Title = {Sperm whale abundance estimates from acoustic surveys of the Ionian Sea and Straits of Sicily in 2003},
+	Volume = {87},
+	Year = {2007}}
 
 @article{manzo2012estimation,
 	Author = {Manzo, Emiliano and Bartolommei, Paola and Rowcliffe, J Marcus and Cozzolino, Roberto},
@@ -236,18 +283,6 @@
 	Title = {Passive Acoustic Monitoring to Detect Spawning in Large-Bodied Catostomids},
 	Volume = {143},
 	Year = {2014}}
-
-@article{mckown2012wireless,
-	Author = {McKown, Matthew W and Lukac, Martin and Borker, Abraham and Tershy, Bernie and Croll, Don},
-	Date-Added = {2014-06-23 12:18:36 +0000},
-	Date-Modified = {2014-06-23 12:18:36 +0000},
-	Journal = {The Journal of the Acoustical Society of America},
-	Number = {3},
-	Pages = {2036--2036},
-	Publisher = {Acoustical Society of America},
-	Title = {A wireless acoustic sensor network for monitoring wildlife in remote locations},
-	Volume = {132},
-	Year = {2012}}
 
 @article{blumstein2011acoustic,
 	Author = {Blumstein, Daniel T and Mennill, Daniel J and Clemins, Patrick and Girod, Lewis and Yao, Kung and Patricelli, Gail and Deppe, Jill L and Krakauer, Alan H and Clark, Christopher and Cortopassi, Kathryn A and others},
