Format and figure changes lineno, page nos, 7cm figs etc.

--- a/supplementary-material/REM-methods.tex
+++ b/supplementary-material/REM-methods.tex
@@ -35,7 +35,7 @@ For different values of $\theta$ and $\alpha$, the only thing that changes is th
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=0.8\textwidth]{../imgs/equalRegions.pdf}
+\includegraphics[width=0.8\textwidth]{/home/tim/Dropbox/liz-paper/lucasMoorcroftManuscript/imgs/equalRegions.pdf}
 \caption{The location of each model in parameter space. Each named model must be derived separately. However, the results of the different models are often the same; areas coloured the same have the same result. Other than the gas model and th REM model, individual models are named after the compass point of the quadrant they are in. The region extends past $\alpha, \theta=2\pi$ to clearly display the models that are defined for only $\alpha=2\pi$ or $\theta=2\pi$ (e.g. the REM model is only definied for $\alpha=2\pi$.}
 \label{f:equalRegions}
 \end{figure}
